<resources>
    <string name="app_name">SpaceTravelApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

...
    <string name="appTitle">The Lonely Exoplanet Guide</string>
    <string name="appIntro">Welcome to the exoplanet guide designed to help teach you everything you would need to know about planets beyond our solar system. Explore the entire exoplanet database which gives you all the available information for each planet making you the planet expert. If scrolling through an endless list of planets bores, you then why not plan a dream journey to any planet you 
    <string name="startJourney">Start your journey now</string>
    <string name="buttonSearch">Search planet archive</string>
    <string name="nouser">Select a profile</string>
    <string name="changeuser">Change user background</string>
    <string name="changeuseracount">Changes the users account</string>
    <string name="accounts">Select a profile</string>
    <string name="title_activity_profiles">Select a profile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="createprofle">Create new profile</string>
    <string name="username">Username</string>
    <string name="saveprofile">Save Profile</string>
    <string name="favouritebutton">Favourite a planet</string>
    <string name="temperature">Temperature</string>
    <string name="addtojourney">Add to journey</string>
    <string name="surfaceType">Surface Type:</string>
    <string name="rightascension">Right Ascension:</string>
    <string name="declination">Declination:</string>
...
